Wraps up the design and fixes several issues

--- a/app/static/app/js/css/AssetDownloadButtons.scss
+++ b/app/static/app/js/css/AssetDownloadButtons.scss
@@ -15,3 +15,13 @@
         }
     }
 }
+
+.btn-with-icon {
+    background-color: #EAB41B;
+    border-radius: 12px;
+    color: #ffffff;
+    font-size: x-small;
+    height: 20px;
+    padding: 0px 5px;
+    width: 100%;
+}
