--- a/app/static/app/js/css/ProjectListItem.scss
+++ b/app/static/app/js/css/ProjectListItem.scss
@@ -29,8 +29,8 @@
     }
 
     .project-wrapper {
-        border-top: solid 1px #4c4c4c;
-        padding-top: 40px;
+        border-bottom: solid 1px #4c4c4c;
+        padding-bottom: 40px;
     }
 
     .drag-drop-icon{
