--- a/app/static/app/js/css/TaskListItem.scss
+++ b/app/static/app/js/css/TaskListItem.scss
@@ -1,4 +1,5 @@
 .task-list-item{
+    background-color: #ffffff;
     border: solid 1px #4c4c4c;
     border-radius: 20px;
     margin-right: 15px;
@@ -21,6 +22,10 @@
         }
     }
 
+    .row-odd {
+        background-color: #eeeded;
+    }
+
     .name{
         font-size: medium;
         font-weight: bold;
@@ -33,6 +38,8 @@
         background-color: transparent;
         font-size: medium;
     }
+
+    .btn-icon-warning:hover { color: #EAB41B }
 
     .btn-edit {
         color: #528f53;
@@ -63,12 +70,21 @@
     }
 
     .status-label{
-        color: #ffffff;
-        padding: 4px 10px;
-        width: 100%;
-        font-size: 70%;
         border: none;
-        border-radius: 12%;
+        border-radius: 12px;
+        color: #ffffff;
+        font-size: xx-small;
+        height: 100%;
+        padding: 0;
+        width: 100%;
+    }
+
+    .ver-mapa {
+        background-color: #049715;
+    }
+
+    .status-label-content{
+        padding: 5px 0px;
     }
 
     .clickable:hover{
